--- a/app/src/main/res/layout/list_layout.xml
+++ b/app/src/main/res/layout/list_layout.xml
@@ -21,44 +21,55 @@
                 android:id="@+id/product_image"
                 android:layout_width="115dp"
                 android:layout_height="112dp"
+                android:layout_marginTop="8dp"
                 android:padding="4dp"
-                tools:layout_editor_absoluteX="0dp"
-                tools:layout_editor_absoluteY="0dp" />
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent" />
 
             <TextView
                 android:id="@+id/v_name"
                 android:layout_width="237dp"
                 android:layout_height="39dp"
                 android:layout_below="@+id/product_price"
+                android:layout_marginBottom="8dp"
+                android:layout_marginStart="8dp"
+                android:layout_marginTop="8dp"
                 android:layout_toEndOf="@+id/id_ph"
                 android:layout_toRightOf="@+id/id_ph"
                 android:text="Apple MacBook Air Core i5 5th Gen - (8 GB/128 GB SSD/Mac OS Sierra)"
                 android:textAppearance="@style/Base.TextAppearance.AppCompat.Small"
                 android:textColor="#000000"
-                tools:layout_editor_absoluteX="121dp"
-                tools:layout_editor_absoluteY="0dp" />
+                app:layout_constraintBottom_toTopOf="@+id/id_ph"
+                app:layout_constraintStart_toEndOf="@+id/product_image"
+                app:layout_constraintTop_toTopOf="parent" />
 
             <TextView
                 android:id="@+id/id_ph"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_below="@id/v_name"
+                android:layout_marginBottom="8dp"
+                android:layout_marginStart="8dp"
                 android:layout_toRightOf="@id/imageView"
                 android:text="13.3 Inch, 256 GB"
                 android:textAppearance="@style/Base.TextAppearance.AppCompat.Small"
-                tools:layout_editor_absoluteX="132dp"
-                tools:layout_editor_absoluteY="58dp" />
+                app:layout_constraintBottom_toTopOf="@+id/product_price"
+                app:layout_constraintStart_toEndOf="@+id/product_image" />
 
             <TextView
                 android:id="@+id/product_price"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_marginBottom="8dp"
+                android:layout_marginEnd="8dp"
+                android:layout_marginStart="8dp"
                 android:layout_toRightOf="@id/product_image"
                 android:text="INR 56990"
                 android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
                 android:textStyle="bold"
-                tools:layout_editor_absoluteX="128dp"
-                tools:layout_editor_absoluteY="88dp" />
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="@+id/v_name"
+                app:layout_constraintStart_toEndOf="@+id/product_image" />
 
         </android.support.constraint.ConstraintLayout>
 
