--- a/app/src/main/res/layout/activity_product.xml
+++ b/app/src/main/res/layout/activity_product.xml
@@ -8,82 +8,113 @@
 
     <TextView
         android:id="@+id/tv_name"
-        android:layout_width="283dp"
-        android:layout_height="38dp"
-        android:text="TextView"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:layout_marginBottom="29dp"
+        android:layout_marginEnd="48dp"
+        android:layout_marginStart="48dp"
+        android:layout_marginTop="16dp"
+        android:text="Mazda 6"
         android:textAppearance="@android:style/TextAppearance.Material.Title"
-        tools:layout_editor_absoluteX="48dp"
-        tools:layout_editor_absoluteY="16dp" />
-
-    <com.gc.materialdesign.views.ButtonRectangle
-        android:id="@+id/btn_comprar"
-        android:layout_width="128dp"
-        android:layout_height="63dp"
-        android:text="Realizar pedido"
-        tools:layout_editor_absoluteX="216dp"
-        tools:layout_editor_absoluteY="83dp" />
+        app:layout_constraintBottom_toTopOf="@+id/btn_comprar"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
     <ImageView
         android:id="@+id/imageView2"
-        android:layout_width="159dp"
-        android:layout_height="172dp"
-        app:srcCompat="@drawable/c_color"
-        tools:layout_editor_absoluteX="26dp"
-        tools:layout_editor_absoluteY="75dp" />
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:layout_marginBottom="24dp"
+        android:layout_marginEnd="19dp"
+        android:layout_marginStart="26dp"
+        android:layout_marginTop="21dp"
+        app:layout_constraintBottom_toBottomOf="@+id/tv_desc"
+        app:layout_constraintEnd_toStartOf="@+id/tv_desc"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/tv_name"
+        app:srcCompat="@drawable/c_color" />
 
     <TextView
         android:id="@+id/textView4"
         android:layout_width="201dp"
-        android:layout_height="44dp"
+        android:layout_height="0dp"
+        android:layout_marginBottom="6dp"
+        android:layout_marginStart="26dp"
         android:text="Tiendas Disponibles"
-        android:textAppearance="@android:style/TextAppearance.Material.SearchResult.Title"
-        tools:layout_editor_absoluteX="26dp"
-        tools:layout_editor_absoluteY="297dp" />
+        android:textAppearance="@android:style/TextAppearance.DialogWindowTitle"
+        app:layout_constraintBottom_toTopOf="@+id/gridLayout"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/tv_price" />
 
     <TextView
         android:id="@+id/textView5"
         android:layout_width="wrap_content"
-        android:layout_height="15dp"
-        android:text="Descripcion"
-        tools:layout_editor_absoluteX="204dp"
-        tools:layout_editor_absoluteY="158dp" />
+        android:layout_height="0dp"
+        android:layout_marginBottom="79dp"
+        android:text="50000"
+        app:layout_constraintBottom_toTopOf="@+id/tv_price"
+        app:layout_constraintStart_toStartOf="@+id/tv_desc"
+        app:layout_constraintTop_toBottomOf="@+id/btn_comprar" />
 
     <TextView
         android:id="@+id/tv_desc"
-        android:layout_width="139dp"
-        android:layout_height="87dp"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:layout_marginBottom="26dp"
+        android:layout_marginEnd="41dp"
+        android:layout_marginTop="26dp"
         android:text="Description"
-        tools:layout_editor_absoluteX="204dp"
-        tools:layout_editor_absoluteY="184dp" />
+        app:layout_constraintBottom_toTopOf="@+id/textView4"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintEnd_toStartOf="@+id/btn_comprar"
+        app:layout_constraintStart_toEndOf="@+id/tv_price"
+        app:layout_constraintTop_toTopOf="@+id/textView5" />
 
     <TextView
         android:id="@+id/tv_price"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="TextView"
-        android:textAppearance="@android:style/TextAppearance.Material.ListItem"
-        tools:layout_editor_absoluteX="26dp"
-        tools:layout_editor_absoluteY="252dp" />
+        android:layout_marginBottom="23dp"
+        android:layout_marginEnd="113dp"
+        android:layout_marginStart="26dp"
+        android:text="Oddissey"
+        android:textAppearance="@android:style/TextAppearance.Holo"
+        app:layout_constraintBottom_toTopOf="@+id/textView4"
+        app:layout_constraintEnd_toStartOf="@+id/tv_desc"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/textView5" />
 
     <GridLayout
-        android:layout_width="329dp"
-        android:layout_height="148dp"
-        tools:layout_editor_absoluteX="28dp"
-        tools:layout_editor_absoluteY="347dp">
+        android:id="@+id/gridLayout"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:layout_marginBottom="16dp"
+        android:layout_marginEnd="27dp"
+        android:layout_marginStart="27dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/textView4">
 
         <TextView
             android:id="@+id/tv_ubicacion"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="TextView" />
+            android:text="Audi" />
 
-        <TextView
-            android:id="@+id/tv_tienda"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="TextView"
-            tools:layout_editor_absoluteX="0dp"
-            tools:layout_editor_absoluteY="59dp" />
     </GridLayout>
+
+    <com.gc.materialdesign.views.ButtonRectangle
+        android:id="@+id/btn_comprar"
+        android:layout_width="100dp"
+        android:layout_height="0dp"
+        android:layout_marginBottom="12dp"
+        android:layout_marginEnd="40dp"
+        android:text="Realizar pedido"
+        app:layout_constraintBottom_toTopOf="@+id/textView5"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toEndOf="@+id/tv_desc"
+        app:layout_constraintTop_toBottomOf="@+id/tv_name" />
 
 </android.support.constraint.ConstraintLayout>
